# mesh-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INCENTIVE_LAYER.md  Justfile  PLUGINS.md  README.md  RELEASE.md  index.html  install.sh  mesh-client.js  mesh-dashboard.html  mesh-mine.js  mesh-server.py  message_protocol.md
.github/workflows/: ci.yml  compat-smoke.yml  release.yml
cli/: mesh-balance.sh  mesh-claim.sh  mesh-mine.sh
contracts/: deployments.json  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MeshFactory.sol  MeshPaymaster.sol  MeshToken.sol  MeshTokenTestnet.sol  PaymentChannel.sol
contracts/test/: EndToEnd.t.sol  MeshPaymaster.t.sol  MeshToken.t.sol  PaymentChannel.t.sol
docs/: CNAME  index.html
evals/: README.md  ab-test.sh  backend-benchmark.example.json  backend-benchmark.py
evals/moe/prompts/: mt-bench-8.jsonl
evals/scenarios/edit-file/: server.py
mesh-llm/: Cargo.toml
mesh-llm/docs/: DESIGN.md  MOE_STRATEGY_BENCHMARKS.md  TESTING.md
mesh-llm/examples/plugin-surface/src/: main.rs
mesh-llm/plugin/: Cargo.toml
mesh-llm/plugin/src/: lib.rs
mesh-llm/proto/: node.proto  plugin.proto
mesh-llm/skills/knowledge/: SKILL.md
mesh-llm/src/: affinity.rs  api.rs  autoupdate.rs  backend.rs  benchmark.rs  config.rs  election.rs  launch.rs  lib.rs  main.rs  mesh.rs  model_manifest.rs  moe.rs  nostr.rs  plugin.rs  plugin_mcp.rs  proxy.rs  router.rs  tunnel.rs
mesh-llm/src/api/: mod.rs
mesh-llm/src/app/: mod.rs
mesh-llm/src/cli/: benchmark.rs  mod.rs  runtime.rs
mesh-llm/src/cli/commands/: benchmark.rs  download.rs  mod.rs  runtime.rs
mesh-llm/src/inference/: election.rs  launch.rs  moe.rs
mesh-llm/src/mesh/: mod.rs
mesh-llm/src/mlx/: mod.rs  model.rs  server.rs
mesh-llm/src/models/: local.rs  mod.rs  resolve.rs  topology.rs
mesh-llm/src/network/: affinity.rs  mod.rs  proxy.rs  tunnel.rs
mesh-llm/src/plugins/blackboard/: mod.rs
mesh-llm/src/plugins/example/: Cargo.toml
mesh-llm/src/plugins/example/src/: main.rs
mesh-llm/src/plugins/mlx-native/src/: main.rs
mesh-llm/src/protocol/: convert.rs  mod.rs
mesh-llm/src/runtime/: local.rs  mod.rs  proxy.rs
mesh-llm/src/runtime/proxy/: tests.rs
mesh-llm/src/system/: autoupdate.rs  benchmark_prompts.rs  hardware.rs  mod.rs  moe_benchmark.rs
mesh-llm/ui/: index.html
mesh-llm/ui/src/: App.tsx
mesh-llm/ui/src/components/config/: CatalogContextMenu.tsx  ConfigNodeList.tsx  ConfigNodeSection.tsx  ConfigPageHeader.tsx  ConfigToolsPanel.tsx  ContextWindowControl.tsx  DndContext.tsx  ModelCatalog.tsx  ModelDetailPanel.tsx  SaveConfig.tsx  TomlEditor.tsx  VramContainer.tsx
mesh-llm/ui/src/components/config/__tests__/: DndContext.test.tsx
mesh-llm/ui/src/lib/: vram.ts
mesh-llm/ui/src/lib/__tests__/: vram.test.ts
mesh-llm/ui/src/pages/: ConfigPage.tsx
mesh-llm/ui/src/pages/config/: configReducer.ts
scripts/: build-linux-amd.sh  build-linux.sh  build-mac.sh  build-release.sh  ci-client-auto-test.sh  ci-compat-smoke.sh  ci-smoke-test.sh  ci-split-test.sh  package-release.sh  release-version.sh
