[workspace]
members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
    "mesh-llm/src/plugins/mlx-native",
]
default-members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
]
resolver = "2"

[patch."https://github.com/oxideai/mlx-rs"]
mlx-rs = { git = "https://github.com/i386/mlx-rs", rev = "6d95787e6f415638cb84380a87a70a6bd151fb42", package = "mlx-rs" }
mlx-lm = { git = "https://github.com/i386/mlx-rs", rev = "6d95787e6f415638cb84380a87a70a6bd151fb42", package = "mlx-lm" }
mlx-lm-utils = { git = "https://github.com/i386/mlx-rs", rev = "6d95787e6f415638cb84380a87a70a6bd151fb42", package = "mlx-lm-utils" }
