[workspace]
members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
    "mesh-llm/src/plugins/mlx-native",
]
default-members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
]
resolver = "2"

[patch."https://github.com/oxideai/mlx-rs"]
mlx-rs = { git = "https://github.com/i386/mlx-rs", rev = "445e8ac3d667a55a109e355c6ebc116919c12c71", package = "mlx-rs" }
mlx-lm = { git = "https://github.com/i386/mlx-rs", rev = "445e8ac3d667a55a109e355c6ebc116919c12c71", package = "mlx-lm" }
mlx-lm-utils = { git = "https://github.com/i386/mlx-rs", rev = "445e8ac3d667a55a109e355c6ebc116919c12c71", package = "mlx-lm-utils" }
