[package]
name = "mesh-llm"
version = "0.49.0"
edition = "2021"

[dependencies]
mesh-llm-plugin = { path = "plugin" }
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
biip = "0.9.2"
dirs = "6.0.0"
hex = "0.4.3"
include_dir = "0.7"
nostr-sdk = { version = "0.44.1", default-features = false }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-stream = "0.1"
libc = "0.2.183"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1"
prost = "0.14"
toml = "0.9"

[dev-dependencies]
serial_test = "3"
