[package]
name = "mesh-llm"
version = "0.55.1"
edition = "2021"

[dependencies]
mesh-llm-plugin = { path = "plugin" }
iroh = "0.97"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
biip = "0.9.2"
dirs = "6.0.0"
hex = "0.4.3"
include_dir = "0.7"
nostr-sdk = { version = "0.44.1", default-features = false }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
httparse = "1"
tokio-stream = "0.1"
libc = "0.2.183"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1"
prost = "0.14"
toml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
hf-hub = { git = "https://github.com/i386/hf-hub.git", rev = "3afec18e119569d21083b13b682e8629bb874dea", default-features = false, features = ["ureq", "tokio", "rustls-tls", "cache-manager"] }

[dev-dependencies]
serial_test = "3"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
