[package]
name = "mesh-llm-plugin"
version = "0.55.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
prost = "0.14"
rmcp = { version = "1.2", features = ["server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
