[package]
name = "plugin-surface-example"
version = "0.55.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
mesh-llm-plugin = { path = "../../../plugin" }
rmcp = { version = "1.2", features = ["server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
